updated types to allow for nulls on update and updated dal accordingly
