# services/catalog/api/catalog.go
@@ -18,7 +18,7 @@ func NewCatalogHandler(db *dal.MongoDAL) *CatalogHandler {
 func (h *CatalogHandler) GetPuzzles(c *gin.Context) {
 	puzzles, err := h.db.GetAllPuzzles(c)
 	if err != nil {
-		c.JSON(500, gen.Error{Code: 500, Message: err.Error()})
+		c.JSON(int(err.Code), err)
 	}
 	c.JSON(200, puzzles)
 }
@@ -31,14 +31,14 @@ func (h *CatalogHandler) AddPuzzle(c *gin.Context) {
 
 	puzzle, err := h.db.AddPuzzle(c, newPuzzle)
 	if err != nil {
-		c.JSON(500, gen.Error{Code: 500, Message: err.Error()})
+		c.JSON(int(err.Code), err)
 	}
 	c.JSON(201, puzzle)
 }
 
 func (h *CatalogHandler) DeletePuzzle(c *gin.Context, id string) {
 	if err := h.db.DeletePuzzle(c, id); err != nil {
-		c.JSON(500, gen.Error{Code: 500, Message: err.Error()})
+		c.JSON(500, err)
 	}
 	c.JSON(204, nil)
 }
@@ -46,11 +46,20 @@ func (h *CatalogHandler) DeletePuzzle(c *gin.Context, id string) {
 func (h *CatalogHandler) GetPuzzle(c *gin.Context, id string) {
 	puzzle, err := h.db.GetPuzzle(c, id)
 	if err != nil {
-		c.JSON(500, gen.Error{Code: 500, Message: err.Error()})
+		c.JSON(int(err.Code), err)
 	}
 	c.JSON(200, puzzle)
 }
 
-func (*CatalogHandler) UpdatePuzzle(c *gin.Context, id string) {
-	c.JSON(200, "UpdatePuzzle not implemented")
+func (h *CatalogHandler) UpdatePuzzle(c *gin.Context, id string) {
+	var updates gen.PuzzleUpdate
+	if err := c.BindJSON(&updates); err != nil {
+		c.JSON(400, gen.Error{Code: 400, Message: err.Error()})
+	}
+	err := h.db.UpdatePuzzle(c, id, updates)
+	if err != nil {
+		c.JSON(int(err.Code), err)
+	}
+
+	c.JSON(200, nil)
 }
